# logos-blockchain

./: .cargo-deny.toml  .gitignore  Cargo.toml  README.md  compose.static.yml
.github/: CODEOWNERS
.github/workflows/: code-check.yml  codecov.yml
consensus/cryptarchia-sync/src/: config.rs
consensus/cryptarchia-sync/src/libp2p/: behaviour.rs  downloader.rs  utils.rs
nodes/api-common/: Cargo.toml
nodes/nomos-node/: config-one-node.yaml
nodes/nomos-node/http-client/: Cargo.toml
nodes/nomos-node/http-client/src/: lib.rs
nodes/nomos-node/node/src/api/: backend.rs
nodes/nomos-node/node/src/config/: mod.rs
nodes/nomos-node/node/src/config/network/: deployment.rs  mod.rs
nodes/nomos-node/node/src/generic_services/: mod.rs
nodes/nomos-node/node/src/generic_services/blend/: mod.rs
nomos-blend/crypto/src/: cipher.rs
nomos-blend/message/src/encap/: encapsulated.rs
nomos-blend/proofs/src/quota/inputs/prove/: mod.rs  private.rs
nomos-blend/scheduling/src/message_blend/crypto/core_and_leader/: send.rs
nomos-blend/scheduling/src/message_blend/crypto/leader/: send.rs
nomos-c/: Cargo.toml
nomos-c/src/: errors.rs  lib.rs  node.rs
nomos-c/src/api/: cryptarchia.rs  lifecycle.rs  mod.rs  wallet.rs
nomos-c/src/api/types/: value.rs
nomos-core/chain-defs/src/block/: mod.rs
nomos-core/chain-defs/src/header/: mod.rs
nomos-core/chain-defs/src/mantle/: encoding.rs  ledger.rs  tx.rs
nomos-core/chain-defs/src/proofs/: leader_proof.rs
nomos-da/network/core/src/protocols/sampling/: errors.rs  mod.rs
nomos-da/network/core/src/protocols/sampling/historic/: mod.rs  request_behaviour.rs
nomos-da/network/core/src/protocols/sampling/requests/: request_behaviour.rs
nomos-da/network/core/src/swarm/: executor.rs  validator.rs
nomos-da/network/core/src/swarm/common/: monitor.rs
nomos-kms/keys/src/keys/zk/: private.rs
nomos-libp2p/src/: swarm.rs
nomos-libp2p/src/behaviour/: mod.rs
nomos-libp2p/src/config/: mod.rs
nomos-services/api/: Cargo.toml
nomos-services/api/src/http/consensus/: cryptarchia.rs
nomos-services/blend/src/test_utils/: epoch.rs
nomos-services/chain/chain-leader/src/: leadership.rs  lib.rs
nomos-services/chain/chain-network/src/: lib.rs
nomos-services/chain/chain-service/: Cargo.toml
nomos-services/chain/chain-service/src/: lib.rs  relays.rs
nomos-services/chain/chain-service/src/sync/: block_provider.rs
nomos-services/data-availability/network/src/: lib.rs
nomos-services/data-availability/network/src/backends/: mod.rs
nomos-services/data-availability/network/src/backends/libp2p/: common.rs  executor.rs  validator.rs
nomos-services/data-availability/network/src/backends/mock/: executor.rs
nomos-services/data-availability/network/src/storage/: mod.rs
nomos-services/data-availability/network/src/storage/adapters/: mock.rs  rocksdb.rs
nomos-services/data-availability/sampling/: Cargo.toml
nomos-services/data-availability/sampling/src/: lib.rs
nomos-services/data-availability/sampling/src/network/: mod.rs
nomos-services/network/src/backends/libp2p/swarm/: mod.rs
nomos-services/storage/src/api/backend/rocksdb/: da.rs
nomos-services/storage/src/api/da/: mod.rs  requests.rs
nomos-services/wallet/src/: api.rs
scripts/: setup-nomos-circuits.ps1  setup-nomos-circuits.sh
testnet/: Dockerfile
testnet/l2-sequencer-archival-demo/: .env.example  .env.example-local  README.md  compose.yml  run-local.sh
testnet/l2-sequencer-archival-demo/archiver/: Cargo.toml  README.md
testnet/l2-sequencer-archival-demo/archiver/src/: block.rs  cli.rs  ctrl_c.rs  db.rs  http.rs  main.rs  output.rs
testnet/l2-sequencer-archival-demo/nginx/: nginx.conf
testnet/l2-sequencer-archival-demo/sequencer/: .env.example  Cargo.toml  README.md
testnet/l2-sequencer-archival-demo/sequencer/src/: api.rs  config.rs  ctrl_c.rs  db.rs  lib.rs  main.rs  sequencer.rs
testnet/l2-sequencer-archival-demo/webapp/: .env.testnet  README.md  index.html  package.json  vite.config.js
testnet/l2-sequencer-archival-demo/webapp/src/: App.vue
testnet/l2-sequencer-archival-demo/webapp/src/components/: index.js
testnet/l2-sequencer-archival-demo/webapp/src/components/navbar/: NavbarCompact.vue  ThemeSwitch.vue  index.js
testnet/l2-sequencer-archival-demo/webapp/src/components/ui/: Switch.vue  index.js
testnet/l2-sequencer-archival-demo/webapp/src/components/wallet/: ArchivedBlockList.vue  TransactionCreator.vue  TransactionList.vue  WalletInfo.vue  index.js
testnet/l2-sequencer-archival-demo/webapp/src/router/: index.js
testnet/l2-sequencer-archival-demo/webapp/src/stores/: archiveView.js  walletView.js
testnet/l2-sequencer-archival-demo/webapp/src/views/: ArchiveView.vue  WalletView.vue  index.js
tests/: Cargo.toml  README.md
tests/features/testing_framework/: local_idle_smoke.feature
tests/src/: lib.rs
tests/src/common/: sync.rs
tests/src/nodes/: executor.rs  mod.rs  validator.rs
tests/src/tests/cryptarchia/: bootstrap.rs  happy.rs  invalid_tx_handling.rs  orphan.rs
tests/src/tests/da/: disperse.rs  historic_sampling.rs
tests/src/tests/mantle/: sdp_ops.rs
tests/src/tests/testing_framework/: cucumber_smoke_local.rs  smoke_local.rs
tests/src/topology/: mod.rs
tests/src/topology/configs/: deployment.rs
utxotree/: Cargo.toml
utxotree/src/: lib.rs  merkle.rs
zk/circuits/utils/src/: lib.rs
zk/groth16/: Cargo.toml
zk/proofs/poc/: Cargo.toml  build.rs
zk/proofs/pol/: Cargo.toml  build.rs
zk/proofs/pol/src/: lib.rs  wallet_inputs.rs
zk/proofs/poq/: Cargo.toml  build.rs
zk/proofs/poq/src/: inputs.rs  lib.rs  wallet_inputs.rs
zk/proofs/zksign/: Cargo.toml  build.rs
