[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "tests"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                    = "0.1"
blst                           = { version = "0.3.11" }
broadcast-service              = { workspace = true }
chain-leader                   = { workspace = true }
chain-network                  = { workspace = true }
chain-service                  = { workspace = true }
common-http-client             = { workspace = true }
cryptarchia-engine             = { features = ["serde"], workspace = true }
cryptarchia-sync               = { workspace = true }
cucumber                       = "=0.22.0"
cucumber_ext                   = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", branch = "master" }
executor-http-client           = { workspace = true }
futures                        = { default-features = false, version = "0.3" }
futures-util                   = { default-features = false, version = "0.3.31" }
groth16                        = { workspace = true }
hex                            = { default-features = false, version = "0.4.3" }
key-management-system-service  = { workspace = true }
kzgrs-backend                  = { workspace = true }
nomos-api                      = { workspace = true }
nomos-blend-service            = { features = ["libp2p"], workspace = true }
nomos-core                     = { workspace = true }
nomos-da-dispersal             = { workspace = true }
nomos-da-network-core          = { workspace = true }
nomos-da-network-service       = { workspace = true }
nomos-da-sampling              = { workspace = true }
nomos-da-verifier              = { workspace = true }
nomos-executor                 = { default-features = false, features = ["testing", "tracing"], workspace = true }
nomos-http-api-common          = { workspace = true }
nomos-libp2p                   = { workspace = true }
nomos-network                  = { features = ["libp2p"], workspace = true }
nomos-node                     = { default-features = false, features = ["testing"], workspace = true }
nomos-sdp                      = { workspace = true }
nomos-time                     = { workspace = true }
nomos-tracing                  = { workspace = true }
nomos-tracing-service          = { workspace = true }
nomos-utils                    = { workspace = true }
nomos-wallet                   = { workspace = true }
num-bigint                     = { default-features = false, version = "0.4" }
rand                           = { workspace = true }
reqwest                        = { features = ["json"], workspace = true }
serde_json                     = "1.0"
serde_yaml                     = "0.9"
serial_test                    = "3.1.1"
subnetworks-assignations       = { workspace = true }
tempfile                       = { workspace = true }
testing-framework-core         = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", branch = "master" }
testing-framework-runner-local = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", branch = "master" }
testing-framework-workflows    = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", branch = "master" }
time                           = { default-features = false, version = "0.3" }
tokio                          = "1"
tracing                        = { workspace = true }
tracing-subscriber             = { version = "0.3", features = ["env-filter", "fmt"] }
tx-service                     = { features = ["libp2p", "mock"], workspace = true }

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_cryptarchia_bootstrap"
path = "src/tests/cryptarchia/bootstrap.rs"

[[test]]
name = "test_orphan_handling"
path = "src/tests/cryptarchia/orphan.rs"

[[test]]
name = "test_immutable_blocks"
path = "src/tests/cryptarchia/immutable_blocks.rs"

[[test]]
name = "test_invalid_tx_handling"
path = "src/tests/cryptarchia/invalid_tx_handling.rs"

[[test]]
name = "test_da"
path = "src/tests/da/disperse.rs"

[[test]]
name = "test_da_api"
path = "src/tests/da/api.rs"

[[test]]
name = "test_mempool_api"
path = "src/tests/mempool/api.rs"

[[test]]
name = "test_membership_disperse"
path = "src/tests/membership/disperse.rs"

[[test]]
name = "test_da_historic_sampling"
path = "src/tests/da/historic_sampling.rs"

[[test]]
name = "test_mantle_sdp_ops"
path = "src/tests/mantle/sdp_ops.rs"

[[test]]
name = "test_testing_framework_smoke_local"
path = "src/tests/testing_framework/smoke_local.rs"

[[test]]
name = "test_testing_framework_cucumber_smoke_local"
path = "src/tests/testing_framework/cucumber_smoke_local.rs"
