[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "chain-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait        = "0.1"
broadcast-service  = { workspace = true }
bytes              = { workspace = true }
cryptarchia-engine = { features = ["serde"], workspace = true }
cryptarchia-sync   = { workspace = true }
futures            = { default-features = false, version = "0.3" }
groth16            = { workspace = true }
nomos-core         = { workspace = true }
nomos-ledger       = { features = ["serde"], workspace = true }
nomos-network      = { workspace = true }
nomos-storage      = { workspace = true }
nomos-time         = { features = ["ntp"], workspace = true }
nomos-utils        = { workspace = true }
num-bigint         = { default-features = false, version = "0.4" }
overwatch          = { workspace = true }
serde              = { workspace = true }
serde_with         = { workspace = true }
services-utils     = { workspace = true }
strum              = "0.27"
thiserror          = "1.0"
tokio              = { default-features = false, version = "1" }
tracing            = { workspace = true }
tracing-futures    = { default-features = false, features = ["std-future"], version = "0.2" }
utoipa             = { optional = true, workspace = true }

[dev-dependencies]
key-management-system-keys = { workspace = true }
nomos-core                 = { features = ["mock"], workspace = true }
nomos-network              = { features = ["mock"], workspace = true }
nomos-storage              = { features = ["rocksdb-backend"], workspace = true }
tempfile                   = { default-features = false, version = "3" }

[features]
default      = []
libp2p       = ["nomos-network/libp2p"]
openapi      = ["dep:utoipa"]
pol-dev-mode = ["nomos-core/pol-dev-mode"]
