[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-da-sampling"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait              = "0.1"
bytes                    = { workspace = true }
either                   = { default-features = false, version = "1.15.0" }
futures                  = { default-features = false, version = "0.3" }
hex                      = { default-features = false, version = "0.4.3" }
kzgrs-backend            = { workspace = true }
libp2p-identity          = { version = "0.2" }
nomos-core               = { workspace = true }
nomos-da-network-core    = { workspace = true }
nomos-da-network-service = { workspace = true }
nomos-storage            = { workspace = true }
nomos-tracing            = { workspace = true }
overwatch                = { workspace = true }
rand                     = { workspace = true }
serde                    = { workspace = true }
services-utils           = { workspace = true }
subnetworks-assignations = { workspace = true }
thiserror                = "1.0"
tokio                    = { default-features = false, features = ["test-util"], version = "1" }
tokio-stream             = { default-features = false, version = "0.1.15" }
tracing                  = { workspace = true }
tx-service               = { workspace = true }

[dev-dependencies]
kzgrs = { workspace = true }

[features]
default         = ["libp2p"]
libp2p          = []
rocksdb-backend = ["nomos-storage/rocksdb-backend"]
