[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "pol"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
circuits-prover   = { workspace = true }
circuits-utils    = { workspace = true }
groth16           = { features = ["deser"], workspace = true }
num-bigint        = "0.4"
num-traits        = "0.2.19"
serde             = { features = ["derive", "std"], workspace = true }
serde_json        = { version = "1.0" }
thiserror         = "2.0"
witness-generator = { workspace = true }

[dev-dependencies]

[build-dependencies]
circuits-utils = { workspace = true }

[lints]
workspace = true

[features]
build-verification-key = []
default                = ["build-verification-key"]
