[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "zksign"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
circuits-prover   = { workspace = true }
circuits-utils    = { workspace = true }
groth16           = { features = ["deser"], workspace = true }
num-bigint        = { default-features = false, version = "0.4" }
poseidon2         = { workspace = true }
serde             = { features = ["derive"], workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
witness-generator = { workspace = true }

[dev-dependencies]
num-bigint = "0.4"
poseidon2  = { workspace = true }
rand       = "0.8"

[build-dependencies]
circuits-utils = { workspace = true }

[lints]
workspace = true

[features]
build-verification-key = []
default                = ["build-verification-key"]
